# fiqs

./: .envrc  .gitignore  README.md  compose.yaml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  models.rst  queries_fquery.rst  tree.rst
fiqs/: __init__.py  aggregations.py  exceptions.py  fields.py  i18n.py  models.py  query.py  tree.py
fiqs/testing/: gen_data.py  gen_sale_data.py  gen_traffic_data.py  models.py  utils.py
fiqs/testing/outputs/: avg_part_price_by_part.json  avg_part_price_by_product.json  avg_part_price_by_product_and_by_part.json  avg_part_price_by_product_by_part.json  avg_part_price_by_shop_range_by_part_id.json  avg_price_filter_shop_id_1.json  avg_product_price_and_avg_sales_by_product_type.json  avg_product_price_by_product_type.json  avg_product_price_by_shop_by_product_type.json  avg_sales_by_grouped_shop.json  nb_sales_by_15_minutes_performance.json  nb_sales_by_date_range_by_payment_type.json  nb_sales_by_date_range_with_keys.json  nb_sales_by_date_range_without_keys.json  nb_sales_by_grouped_shop.json  nb_sales_by_grouped_shop_by_payment_type.json  nb_sales_by_payment_type_by_date_range.json  nb_sales_by_payment_type_by_grouped_shop.json  nb_sales_by_product_type.json  nb_sales_by_product_type_by_part_id.json  nb_sales_by_product_type_by_part_id_filter_product_type_1.json  nb_sales_by_product_type_filter_product_type_1.json  nb_sales_by_shop.json  nb_sales_by_shop_by_payment_type_limited_size.json  nb_sales_by_shop_limited_size.json  no_aggregate_no_metric.json  total_and_avg_sales_by_product_type.json  total_and_avg_sales_by_shop.json  total_in_traffic_and_total_out_traffic.json  (+19 more)
fiqs/tests/: conftest.py  run_tests.py  test_aggregations.py  test_elasticsearch.py  test_fields.py  test_performance.py  test_query.py  test_tree.py
