[project]
name = "fiqs"
version = "0.9.4"
description = "Python client for Elasticsearch built on top of elasticsearch"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Pierre Mourlanne", email = "pmourlanne@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.18.0,<10.0.0",
]

[project.urls]
Homepage = "https://github.com/pmourlanne/fiqs"

[dependency-groups]
dev = [
    "Faker==24.4.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "sh==2.0.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-v -s --strict-markers"
markers = [
    "docker: Tests needing a ES docker image running (disabled by default)",
    "performance: Slow tests (disabled by default)",
]
